Code Debugging and Optimizing